--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,18 @@
 name: dartboy
 description: Multiplatform Gameboy Color emulator using dart and flutter.
-
 publish_to: 'none'
-
-version: 1.0.0+1
+version: 1.0.1
 
 environment:
-  sdk: ">=2.7.0 <=2.15.1"
+  sdk: ">=3.6.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  wave_generator: ^0.1.0
-  audioplayers: ^0.20.1
-  file_picker: ^4.2.8
-  image: ^3.1.0
+
+  audioplayers: ^6.4.0
+  file_picker: ^10.1.2
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
